Currently not working. Code is on line 52. I can't get it to work nor attach to a panel.

--- a/CS-GridGame-Team5.csproj
+++ b/CS-GridGame-Team5.csproj
@@ -57,7 +57,7 @@
       <HintPath>DLL Workspace\CalculateDamageDLL\bin\Debug\CalculateDamageDLL.dll</HintPath>
     </Reference>
     <Reference Include="SFX_DLL">
-      <HintPath>DLL Workspace\SFX_DLL\bin\Debug\SFX_DLL.dll</HintPath>
+      <HintPath>DLL Workspace\SFX_DLL\obj\Debug\SFX_DLL.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
