--- a/CS-GridGame-Team5.csproj
+++ b/CS-GridGame-Team5.csproj
@@ -183,6 +183,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\highScores.txt" />
+    <None Include="Assets\Textures\Icons\GameIcon.ico" />
+    <Content Include="GameIcon.ico" />
+    <None Include="Resources\GameIcon.ico" />
     <None Include="Assets\Textures\LancasterBomber_R90.png" />
     <None Include="Assets\Textures\LancasterBomber_R0.png" />
     <None Include="Assets\Textures\LancasterBomber_R270.png" />
